--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,27 @@
 services:
-  activemq:
-    image: apache/activemq-classic:5.18.6
-    container_name: activemq
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
+    restart: always
     ports:
-      - "8161:8161"  # Web Console
-      - "61616:61616"  # OpenWire protocol
+      - "27017:27017"
     environment:
-      ACTIVEMQ_ADMIN_LOGIN: admin
-      ACTIVEMQ_ADMIN_PASSWORD: admin
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
-      - activemq-data:/opt/activemq/data
-      - conf:/conf
+      - mongo_data:/data/db
+
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express
+    restart: always
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+      ME_CONFIG_MONGODB_URL: mongodb://admin:password@mongodb:27017/
 
 volumes:
-  activemq-data:
-  conf:
+  mongo_data:
+    driver: local
