--- a/workload/src/main/resources/application.properties
+++ b/workload/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=workload
 server.port=8085
-spring.datasource.url=jdbc:h2:mem:workload
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.defer-datasource-initialization=true
-spring.h2.console.enabled=true
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.database=workload
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=password
+
+#spring.data.mongodb.uri="mongodb://admin:password@localhost:27017/workload"
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
